# custode

./: .gitignore  CMakeLists.txt  LICENSE_HEADER  README.md  class_diagram.puml
docs/: .gitignore
src/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  hello_test.cc
tools/: CMakeLists.txt
tools/copy_license_header/: copy_license_header.py  requirements.txt
